# Python-Template

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docker/: Dockerfile-main
docs/: README.md  conf.py  index.rst
docs/source/: modules.rst
docs/sphinx/: index.rst
src/: basic.py  cloud_entry.py  docker_entry.py  testfile.py
src/_utils/: common.py  logger.py
src/_utils/apis/: firebase.py
src/_utils/distribution/: pyinstaller_fix_workdir.py  pyinstaller_printout_root.py
src/helper/: config_loader.py  secret_loader.py
tests/: test_basic.py
