[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Sample description"
authors = ["Oliver Stoll <oliverstoll.berlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^6.6.0"
ruff = "^0.1.13"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
