[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Sample description"
authors = ["Oliver Stoll <oliverstoll.berlin@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
poetry = "^1.7.1"
pre-commit = "^3.6.0"
ruff = "^0.1.13"
pytest = "^7.4.4"
mypy = "^1.8.0"
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"


[tool.ruff]
line-length = 100
[tool.ruff.lint.pylint]
max-statements = 20

