[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "python-template"  # project name
version = "0.1.0"
description = ""  # short project description
authors = ["Oliver Stoll <oliverstoll.berlin@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1"
pyyaml = "^6"
my-common-utils = "^1"


[tool.poetry.group.cloud.dependencies]
uvicorn = "^0"
fastapi = "^0"
google-cloud-logging = "^3"


[tool.poetry.group.dev.dependencies]
poetry = "^2"
pre-commit = "^4"
ruff = "^0"
pytest = "^8"
mypy = "^1"
radon = "^6.0.1"
gitlint = "^0.19.1"
commitizen = "^4.8.3"


[tool.ruff]
line-length = 100
[tool.ruff.lint.pylint]
max-statements = 16

[tool.mypy]
python_version = "3.12"
